--- a/src/i18n/sq.json
+++ b/src/i18n/sq.json
@@ -1,7 +1,9 @@
 {
     "Index": {
         "title": "Fjordi i Ballkanit",
-        "description": "Përjetoni Liqenin e mrekullueshëm të Komanit dhe Lumin e Shalës me pionierët origjinalë vendas."
+        "description": "Përjetoni Liqenin e mrekullueshëm të Komanit dhe Lumin e Shalës me pionierët origjinalë vendas.",
+        "metaTitle": "Turne në Liqenin e Komanit | Zbuloni Fjordet e Ballkanit",
+        "metaDescription": "Përjetoni Liqenin e mrekullueshëm të Komanit dhe Lumin e Shalës me turet tona të udhëhequra me varkë. Zbuloni margaritarin e fshehur të Europës."
     },
     "Booking": {
         "selectExperience": "Zgjidh Eksperiencën",
