--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,9 @@
 {
     "Index": {
         "title": "The Fjord of the Balkans",
-        "description": "Experience the majestic Komani Lake and Shala River with the original local pioneers."
+        "description": "Experience the majestic Komani Lake and Shala River with the original local pioneers.",
+        "metaTitle": "Komani Lake Tours | The Fjord of the Balkans",
+        "metaDescription": "Experience the breathtaking Komani Lake ferry and tours with Mario Molla. Explore the Shala River, hike the Albanian Alps, and discover the hidden gem of Europe."
     },
     "Booking": {
         "selectExperience": "Select Experience",
