🚀 FIX SUBPAGES & SOCIAL SHARING
✅ Navigation & Pages:
- Created 'All Tours' listing page at /en/tours/ and /sq/turne/ (fixing the broken header link)
- Added localized titles and descriptions for the listing page

✅ Homepage:
- Fixed missing 'Quick Book' widget by switching hydration to eager load (client:load)

✅ Social Sharing (WhatsApp):
- Changed OpenGraph Image URL to relative path (/og-image.jpg) so previews work on staging/preview deployments (koman-astro.pages.dev) instead of breaking on the live domain

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,6 +5,10 @@
         "metaTitle": "Komani Lake Tours | The Fjord of the Balkans",
         "metaDescription": "Experience the breathtaking Komani Lake ferry and tours with Mario Molla. Explore the Shala River, hike the Albanian Alps, and discover the hidden gem of Europe."
     },
+    "ToursPage": {
+        "title": "All Adventures",
+        "subtitle": "From daily boat crossings to immersive mountain retreats. Choose your way to experience the wild heart of Albania."
+    },
     "Booking": {
         "selectExperience": "Select Experience",
         "pickDate": "Pick a date",
