fix(seo): optimize meta description length for better social preview

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,7 +3,7 @@
         "title": "The Fjord of the Balkans",
         "description": "Experience the majestic Komani Lake and Shala River with the original local pioneers.",
         "metaTitle": "Komani Lake Tours | The Fjord of the Balkans",
-        "metaDescription": "Experience the breathtaking Komani Lake ferry and tours with Mario Molla. Explore the Shala River, hike the Albanian Alps, and discover the hidden gem of Europe."
+        "metaDescription": "Discover the wild heart of Albania with the original Komani Lake pioneers. Guided boat tours, Shala River exploration, and local mountain hospitality."
     },
     "ToursPage": {
         "title": "All Adventures",
