--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,7 +2,7 @@
     "Index": {
         "title": "The Fjord of the Balkans",
         "description": "Experience the majestic Komani Lake and Shala River with the original local pioneers.",
-        "metaTitle": "Komani Lake Tours | The Fjord of the Balkans",
+        "metaTitle": "Komani Lake Tours | The Majestic Fjord of the Balkans",
         "metaDescription": "Discover the wild heart of Albania with the original Komani Lake pioneers. Guided boat tours, Shala River exploration, and local mountain hospitality."
     },
     "ToursPage": {
