fix(seo): disable site config and update text to break scraper cache

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,7 +3,7 @@
         "title": "The Fjord of the Balkans",
         "description": "Experience the majestic Komani Lake and Shala River with the original local pioneers.",
         "metaTitle": "Komani Lake Tours | The Majestic Fjord of the Balkans",
-        "metaDescription": "Discover the wild heart of Albania with the original Komani Lake pioneers. Guided boat tours, Shala River exploration, and local mountain hospitality."
+        "metaDescription": "Discover the wild heart of Albania with the original explorers of these fjords. Guided boat tours, Shala River exploration, and local mountain hospitality."
     },
     "ToursPage": {
         "title": "All Adventures",
