--- a/src/i18n/sq.json
+++ b/src/i18n/sq.json
@@ -47,7 +47,9 @@
         "submit": "Kërko Rezervim",
         "submitting": "Po përpunohet...",
         "successTitle": "Kërkesa u Dërgua!",
-        "successMessage": "Faleminderit {name}. Kemi marrë kërkesën tuaj për {tour}. Do t'ju kontaktojmë së shpejti në {email} për të konfirmuar detajet.",
+        "successMessage": "Faleminderit {name}. Ne e kemi marrë kërkesën tuaj për {tour}. Do t'ju kontaktojmë së shpejti në {email} për të konfirmuar detajet.",
+        "paypalSuccessTitle": "Pagesa u Konfirmua!",
+        "paypalSuccessMessage": "Faleminderit për rezervimin tuaj! Pagesa juaj ishte e suksesshme dhe vendi juaj është i siguruar. Do t'ju dërgojmë një email konfirmimi final së shpejti.",
         "noPayment": "Nuk kërkohet pagesë e menjëhershme. Do ta konfirmojmë vendin tuaj manualisht.",
         "errorCount": "Kërkohet të paktën 1 i rritur.",
         "pageTitle": "Rezervo Turin Tuaj | Komani Lake Tours",
