--- a/src/i18n/sq.json
+++ b/src/i18n/sq.json
@@ -41,7 +41,7 @@
         "phone": "Numri i Telefonit (me kodin e shtetit)",
         "specialRequests": "Kërkesa të Veçanta",
         "placeholderLocation": "Emri juaj",
-        "placeholderEmail": "mariomolla@outlook.com",
+        "placeholderEmail": "johndoe@acme.com",
         "placeholderPhone": "+355 69 XX XX XXX",
         "placeholderSpecial": "Vendi i marrjes, kufizime dietike, ose preferenca data...",
         "submit": "Kërko Rezervim",
