feat: move date selection to Step 1 with inline calendar in booking form

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,6 +31,7 @@
         "ferryDesc": "Include ferry crossing (+€10pp)",
         "addExtraDay": "Add Extra Day (+€30pp)",
         "addExtraDayDesc": "Extend stay to 3 Days",
+        "selectDate": "Select Date",
         "adults": "Adults",
         "children": "Children (4-12)",
         "seniors": "Seniors (65+)",
