--- a/src/i18n/sq.json
+++ b/src/i18n/sq.json
@@ -31,6 +31,7 @@
         "ferryDesc": "Përfshin kalimin me traget (+€10p)",
         "addExtraDay": "Shto një ditë shtesë (+€30p)",
         "addExtraDayDesc": "Zgjatni qëndrimin në 3 Ditë",
+        "selectDate": "Zgjidhni Datën",
         "adults": "Të Rritur",
         "children": "Fëmijë (4-12)",
         "seniors": "Të Moshuar (65+)",
